<resources>
    <string name="app_name">QuizByAI</string>
    <string name="txt_welcome">Welcome to QuizByAI</string>
    <string name="txt_description_login">Upload your notes and let AI create quizzes to help you study smarter.</string>
    <string name="txt_btn_signin_google">Sign in with Google</string>
    <string name="upload_pdf_or_word">Upload PDF or Word</string>
    <string name="upload_description">Let our AI generate practice questions from your document.</string>
    <string name="btn_choose_file">Choose File</string>
    <string name="quick_access">Quick Access</string>
    <string name="recent_quiz">Recent Quiz</string>
    <string name="biology_cells">Biology - Cells</string>
    <string name="saved_document">Saved Document</string>
    <string name="history_notes">History Notes</string>
    <string name="txt_name_guest">Guest</string>
    <string name="txt_gmail_guest">You are not loggin yet!</string>
    <string name="txt_configurequiz">Configure Quiz</string>
    <string name="txt_des_configurequiz">Set details before generation</string>
    <string name="txt_back">Back</string>
    <string name="txt_name_quiz">Name your Quiz</string>
    <string name="txt_hint_name_quiz">Biology - Mitochondria Focus</string>
    <string name="txt_NoQ">Number of Questions</string>
    <string name="txt_selected">Selected: </string>
    <string name="txt_TpQ">Time per Question</string>
    <string name="txt_start_gen">Start Generating</string>
    <string name="number_question">Question 4 of 12</string>
    <string name="rank">Rank #1</string>
    <string name="question">Which organelle is responsible for producing ATP in eukaryotic cells?</string>
    <string name="answer_A">A. N Stores genetic material A</string>
    <string name="answer_B">B. Mitochondrion Produces cellular energy (ATP) B</string>
    <string name="answer_C">C. Rib Synthesizes proteins C</string>
    <string name="answer_D">D. Endoplasmic Reticulum Protein and lipid folding D</string>
    <string name="my_quizzes">My Quizzes</string>
    <string name="description_quiz">Review your past practice sessions</string>
    <string name="title">Biology - Cell Structure</string>
    <string name="date">May 2, 2026 • 12 Qs</string>
    <string name="score">88%</string>
    <string name="textscore">Score</string>
</resources>