<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_question"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/primary_white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/secondary_white"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="60s"
                android:background="@drawable/bg_rounded_card"
                android:paddingHorizontal="20dp"
                android:paddingVertical="8dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/primary_orange"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="24dp"
            android:background="@drawable/bg_rounded_card">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:lineSpacingExtra="6dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_A"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/primary_orange"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingVertical="12dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            android:fontFamily="@font/roboto"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_B"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_orange"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingVertical="12dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            android:fontFamily="@font/roboto"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_C"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_orange"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingVertical="12dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            android:fontFamily="@font/roboto"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_D"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_orange"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingVertical="12dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>