<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".activities.ConfigureQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/txt_configurequiz"
                    android:textColor="@color/primary_white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/txt_des_configurequiz"
                    android:textColor="@color/secondary_white"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_orange"
                android:text="@string/txt_back"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_rounded_card"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/txt_name_quiz"
                android:textColor="@color/primary_white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etxt_name_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_rounded_inner"
                android:ems="10"
                android:inputType="text"
                android:padding="16dp"
                android:hint="@string/txt_hint_name_quiz"
                android:textColor="@color/primary_white"
                android:fontFamily="@font/roboto"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txt_NoQ"
                android:textColor="@color/primary_white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textColor="@color/primary_orange"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textColor="@color/primary_orange"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15"
                    android:textColor="@color/primary_orange"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textColor="@color/primary_orange"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25"
                    android:textColor="@color/primary_orange"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:textColor="@color/primary_orange"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/bg_rounded_inner"
                android:paddingVertical="12dp">
                <SeekBar
                    android:id="@+id/seekBar_NoQ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:progress="3"
                    android:splitTrack="false"
                    android:progressDrawable="@drawable/custom_seekbar_track"
                    android:thumbTint="@color/primary_orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/txt_selected"
                    android:textColor="@color/secondary_white" />

                <TextView
                    android:id="@+id/txt_selected_NoQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="20 questions"
                    android:textColor="@color/primary_orange"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txt_TpQ"
                android:textColor="@color/primary_white"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:checkedChip="@+id/chip15s"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip15s"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15s"
                    android:textColor="@drawable/text_chip_state"
                    app:chipBackgroundColor="@drawable/bg_chip_state"
                    app:chipStrokeWidth="0dp"
                    android:fontFamily="@font/roboto"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip30s"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30s"
                    android:textColor="@drawable/text_chip_state"
                    app:chipBackgroundColor="@drawable/bg_chip_state"
                    app:chipStrokeWidth="0dp"
                    android:fontFamily="@font/roboto"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip60s"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60s"
                    android:textColor="@drawable/text_chip_state"
                    app:chipBackgroundColor="@drawable/bg_chip_state"
                    app:chipStrokeWidth="0dp"
                    android:fontFamily="@font/roboto"/>

            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/btn_start_gen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/primary_orange"
                android:text="@string/txt_start_gen"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                android:fontFamily="@font/roboto"/>

        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/includedBottomNav"
        layout="@layout/activity_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>