<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyQuizzedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@color/black">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_quizzes"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primary_white"/>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description_quiz"
            android:textSize="14sp"
            android:textColor="@color/secondary_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp">

            <EditText
                android:id="@+id/name_quiz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_card"
                android:ems="10"
                android:inputType="text"
                android:padding="16dp"
                android:hint="@string/txt_hint_name_quiz"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/secondary_white"
                android:fontFamily="@font/roboto"
                android:layout_weight="1"
                android:layout_marginEnd="16dp" />

            <ImageButton
                android:id="@+id/btn_find"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_find" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/quiz_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include
        android:id="@+id/includedBottomNav"
        layout="@layout/activity_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>